--- a/public/customer-profile.html
+++ b/public/customer-profile.html
@@ -32,7 +32,12 @@
         $(document).ready(function () {
 
             let user = localStorage.getItem("user");
-            //alert(user);
+            // console.log(user);
+            if(user==null){
+            alert("Please Login !")
+            location.href = "/index.html";
+        }
+
             $("#txtEmail").val(user);
         })
     </script>
@@ -68,9 +73,9 @@
                     kuchEmail: $("#txtEmail").val()
                 }
             }
-            // console.log(kuchEmail);
+            // console.log($("#txtEmail").val());
             $.ajax(obj).done(function (respJsonAry) {
-
+                console.log(respJsonAry);
                 $("#txtName").val(respJsonAry[0].cname);
                 $("#txtNumber").val(respJsonAry[0].cnumber);
                 $("#txtAdd").val(respJsonAry[0].address);
@@ -78,7 +83,8 @@
                 $("#selState").val(respJsonAry[0].state);
                 $("#hdnImg").val(respJsonAry[0].ppic);
                 $("#prevBox").prop("src", "uploads/" + respJsonAry[0].ppic);
-                console.log($("#hdnImg").val());
+
+                // console.log($("#hdnImg").val());
 
             }).fail(function (err) {
                 alert(err.message);
@@ -224,8 +230,8 @@
                 <div class="col-md-8">
                     <div class="row">
                         <div class="col-md-12">
-                            <label for="" class="form-floating">Email ID</label>
-                            <input type="email" class="form-control" disabled readonly id="txtEmail" name="txtEmail">
+                            <label for="" class="form-floating">Email Id</label>
+                            <input type="email" class="form-control" readonly id="txtEmail" name="txtEmail">
                         </div>
                     </div>
                     <div class="row">
